tests/NormalTests/paczka1/small_fuzzy/19589022.err
Error in line 1: KYf A865 89,8
Error in line 4: KYf A228 86,0
Error in line 11: MrXNLroh S427 12,8
Error in line 8: A228 A491 28,1
